# adventofcode2021

./: .gitignore
2019/day1/: sol1.hs  sol2.hs
2019/day2/: sol1.hs  sol2.hs
2020/day10/: sol1.hs  sol2.hs
2021/day1/: sol2.hs
2021/day3/: sol2.hs
2021/day5/: sol1.hs
2021/day6/: sol2.hs
2021/day7/: sol1.hs
2022/: .gitignore  aoc2022.cabal
2022/app/: Main.hs
2022/src/: Aoc.hs  Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Solutions.hs
2022/src/Data/List/Church/Left/: Strict.hs
2023/: adventofcode2023.cabal  stack.yaml
2023/src/: Main.hs  Problems.hs
2023/src/Problems/: AllDays.hs  Day1.hs
2024/: .gitignore  aoc2024.cabal  stack.yaml
2024/lib/: Parsing.hs
2024/lib/Control/: Comonad.hs
2024/lib/Control/Monad/List/: Trans.hs
2024/lib/Control/Monad/Trans/: Class.hs
2024/lib/Data/: Biapplicative.hs  Grid.hs  Zipper.hs
2024/lib/Parsing/: Grid.hs  Lexer.hs
2024/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
day1/: sol1.hs
day2/: sol1.hs  sol2.hs
day3/: sol1.hs
day4/: sol1.hs  sol2.hs
day5/: sol1.hs  sol2.hs
day6/: sol1.hs  sol2.hs
day7/: sol2.hs
