cabal-version:       2.2

name:                aoc2024
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2024#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

common ghcoptions
  default-language:    GHC2021
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

library
  import:              ghcoptions
  hs-source-dirs:      src, lib
  build-depends:       base >= 4.7 && < 5,
                       megaparsec,
                       text
  exposed-modules:     Parsing,
                       Parsing.Lexer

executable aoc2024-day1
  import:              ghcoptions
  hs-source-dirs:      src
  main-is:             Day1.hs
  build-depends:       base >= 4.7 && < 5,
                       aoc2024,
                       containers

executable aoc2024-day2
  import:              ghcoptions
  hs-source-dirs:      src
  main-is:             Day2.hs
  build-depends:       base >= 4.7 && < 5,
                       aoc2024
