cabal-version:       2.2

name:                aoc2024
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2024#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

common ghcoptions
  default-language:    GHC2021
  default-extensions:  NoStarIsType
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

library
  import:              ghcoptions
  hs-source-dirs:      src, lib
  build-depends:       base >= 4.7 && < 5
                       , megaparsec
                       , text
                       , array
                       , mtl
  exposed-modules:     Parsing
                       , Parsing.Lexer
                       , Parsing.Grid
                       , Data.Grid
                       , Data.Zipper
                       , Control.Comonad
                       , Data.Biapplicative

executable aoc2024-day1
  import:              ghcoptions
  hs-source-dirs:      src
  main-is:             Day1.hs
  build-depends:       base >= 4.7 && < 5
                       , aoc2024
                       , containers

executable aoc2024-day2
  import:              ghcoptions
  hs-source-dirs:      src
  main-is:             Day2.hs
  build-depends:       base >= 4.7 && < 5
                       , aoc2024

executable aoc2024-day3
  import:              ghcoptions
  hs-source-dirs:      src
  main-is:             Day3.hs
  build-depends:       base >= 4.7 && < 5
                       , aoc2024

executable aoc2024-day4
  import:              ghcoptions
  hs-source-dirs:      src
  main-is:             Day4.hs
  build-depends:       base >= 4.7 && < 5
                       , aoc2024
                       , text

executable aoc2024-day5
  import:              ghcoptions
  hs-source-dirs:      src
  main-is:             Day5.hs
  build-depends:       base >= 4.7 && < 5
                       , aoc2024
                       , algebraic-graphs

executable aoc2024-day6
  import:              ghcoptions
  hs-source-dirs:      src
  main-is:             Day6.hs
  build-depends:       base >= 4.7 && < 5
                       , aoc2024
                       , containers
                       , array

executable aoc2024-day7
  import:              ghcoptions
  hs-source-dirs:      src
  main-is:             Day7.hs
  build-depends:       base >= 4.7 && < 5
                       , aoc2024
                       , containers
                       , array
